--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -49,13 +49,13 @@
   
     <hr>
   
-    <section class='about1'>
-      <div>
+    <section class='about'>
+      <div class='about1'>
         <h2>Features</h2>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
   
-      <div>
+      <div class='about1'>
         <h2>About</h2>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
@@ -63,18 +63,18 @@
   
     <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
     
-    <section class='about2'>
-      <div>
+    <section class='about'>
+      <div class='about2'>
           <h2>Services</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
       </div>
   
-      <div>
+      <div class='about2'>
         <h2>Product</h2>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
   
-      <div>
+      <div class='about2'>
           <h2>Vision</h2>
           <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>    
       </div>
