--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -19,7 +19,7 @@
     <section id='fixed-header'>
       <nav>
         <div id='links'>
-            <a href='#'>Services</a>
+            <a href='services.html'>Services</a>
             <a href='#'>Product</a>
             <a href='#'>Vision</a>
             <a href='#'>Features</a>
@@ -28,7 +28,7 @@
         </div>
         
         <div id='logo-image'>
-            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            <a href='index.html'><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
         </div>
       </nav>
     </section>
@@ -38,7 +38,7 @@
           <h1>Innovation</h1>
           <h1>On</h1>
           <h1>Demand</h1>
-          <button>Get Started</button>
+          <button><span>Get Started</span></button>
 
       </div>
   
